<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="490dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/BackgroundCardColor">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="14dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_stars_24" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal">


                <LinearLayout
                    android:id="@+id/rateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Rate App"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <!--<View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="70dp"
                    android:background="@color/white"/>-->

                <!--  <ImageView
                      android:id="@+id/lottie"
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:src="@drawable/ic_rate_us"/>-->

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textViewRateTitle"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_title_1"
                    android:fontFamily="@font/font" />


                <TextView
                    android:id="@+id/textViewRate"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_promote"
                    android:fontFamily="@font/font"
                    tools:targetApi="o"/>

                <LinearLayout
                    android:id="@+id/linear_layout_RatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="35dp">

                    <ImageView
                        android:id="@+id/image_view_star_1"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_2"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_3"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_4"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_5"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                </LinearLayout>
                <!-- <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="center"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">

                     <TextView
                         android:textSize="18sp"
                         android:textColor="@color/mainColor"
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rating_text_5"
                         android:fontFamily="@font/font" />

                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="2dp"
                         android:src="@drawable/ic_curve_arrow"
                         app:tint="@color/mainColor"
                         android:layout_marginStart="5dp"
                         android:layout_marginBottom="15dp"/>

                 </LinearLayout>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/text_view_submit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:background="@drawable/background_submit"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/rating_dialog_submit"
                        android:textAllCaps="true"
                        android:fontFamily="@font/font" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/text_view_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/rating_dialog_cancel"
                        android:textAllCaps="true"
                        android:fontFamily="@font/font" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>